gist grid and page overflow issue resolved

--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -40,45 +40,3 @@ a {
     text-decoration: none;
     color: inherit;
 }
-/* Card.scss */
-
-.card {
-    height: 400px; 
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    border: 1px solid #f0f0f0;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-    transition: box-shadow 0.3s ease; 
-    // cursor: pointer;
-  }
-
-  .card:hover {
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); 
-  }
-  
-  .first-element {
-    background-color: rgb(250, 250, 250);
-    height: 80%;
-    overflow-wrap: break-word; 
-    overflow: hidden;
-    padding: 1rem;
-  }
-  
-  .second-element {
-    flex-grow: 1; 
-    background-color: transparent; 
-    height: 20%; 
-    padding: 10px;
-  }
-
-.link-content {
-    text-decoration: none;
-    color: inherit; 
-  }
-
-a {
-    text-decoration: none;
-    color: inherit;
-}
