--- a/src/components/userGistInfo/userGistInfo.scss
+++ b/src/components/userGistInfo/userGistInfo.scss
@@ -23,6 +23,9 @@
     flex-direction: column;
     justify-content: flex-start; 
     align-items: flex-start; 
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
   }
   
   .text-container p {
